--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<meta name='description' content='BlogApp for Svelte'>
 
-	<title>Svelte app</title>
+	<title>BlogApp for Svelte</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
